# sfarctool

./: Cargo.toml  LICENCE  README.md
.cargo/: config.toml
src/: lzss.rs  main.rs  nlz.rs
