[package]
name = "sfarctool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "s"
debug = false

[dependencies]
zigarg = "1.1.0"
byteorder = "1.4.3"
nintendo-lz = "0.1.3"
itertools = "0.10.3"
