[package]
name = "sfarctool"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true

[dependencies]
zigarg = "1.1.0"
byteorder = "1.4.3"
itertools = "0.10.3"
